  called before/after database access to update field data.
- Add Sample_Extensible for FileMaker Server in the "Samples" directory.
- [INFO] Require a 2048-bit private key at least for authentication. Please update in case of using Native
  Authentication or LDAP Authentication.
- [INFO] FileMaker Data API (Trial) of FileMaker Server 16 is no longer supported.
- [BUG FIX] If the server doesn't have valid locale (ex. Windows Server), the number format with thousand
  separator wasn't seen as we wished.
- [BUG FIX] In some case, the record number of related context was affected by pagination record limits.
- [BUG FIX] Fix buildup.sh to minify correctly on FreeBSD (Thanks to Tomomitsu Baba).
- [BUG FIX] In step navigation page, sometimes tap affected to clicking any elements on moved page.
- [BUG FIX] Fix Soft Delete function when the value of 'soft-delete' key is not true.
- [BUG FIX] Fix Soft Delete function when using FileMaker Server. The affected versions are 5.5, 5.6 and 5.7.
- [BUG FIX] Fix an error when using the 'field-group' key and FileMaker Server. The affected version is 5.7.
- [BUG FIX] INTERMediatorLib.getParentRepeaters works in case of parameter node isn't target node.
- [BUG FIX] Fix portal access mode for FileMaker Server in some cases (depending on the status of enclosures
  and repeaters).
- [BUG FIX] Fix INTERMediator.isIE property to detect Internet Explorer 11 (Change false to true if using 
  Internet Explorer 11).

Ver.5.7 (March 29, 2018)
- The "data-im-format" attribute is introduced.
  Please see for detail: <http://inter-mediator.info/ja/for-developers/format.html> (Japanese)
- Microsoft SQL Server is contained in INTER-Mediator support database.
- Support PHP 7.2.
- Start to support FileMaker Data API (Trial) of FileMaker Server 16 as an experimental feature.
- Add FMDataAPI.php (FMDataAPI Ver.6) in "lib" directory for FileMaker Data API (Trial).