@@ -1,1 +1,1 @@
-{"version":"5.8-RC4-dev","releasedate":"2018-10-30"}
+{"version":"5.8-RC4-dev","releasedate":"2018-11-01"}
